[gd_scene load_steps=3 format=3 uid="uid://busswa1duwmll"]

[ext_resource type="Script" uid="uid://bmo3p3gkklawo" path="res://scripts/menu/menu.gd" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://3158vy4vxmn6" path="res://assets/background/title_bk01.png" id="1_yqeox"]

[node name="menu" type="Node2D"]
script = ExtResource("1_vjb58")

[node name="TitleBk01" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_yqeox")

[node name="Title" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_right = 1280.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "1111"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameInput" type="Label" parent="."]
offset_left = 129.0
offset_top = 258.0
offset_right = 466.0
offset_bottom = 346.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Username:"
metadata/_edit_group_ = true

[node name="LineEdit" type="LineEdit" parent="NameInput"]
layout_mode = 0
offset_left = 449.0
offset_right = 1049.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 64

[node name="Button" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 507.0
offset_top = 511.0
offset_right = 809.0
offset_bottom = 607.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "start
"

[connection signal="text_changed" from="NameInput/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
